[gd_scene load_steps=5 format=3 uid="uid://b2qxdqbwxt742"]

[ext_resource type="Script" path="res://Script/ButtonDarkMatter.gd" id="1_ob042"]
[ext_resource type="Theme" uid="uid://eas28obod65v" path="res://Design/Themes/ThemeRecherches.tres" id="1_r48hp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arob1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3adh"]

[node name="ButtonDarkMatter" type="Button"]
custom_minimum_size = Vector2(180, 200)
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("1_r48hp")
script = ExtResource("1_ob042")

[node name="PanelC" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_r48hp")

[node name="PresentationVBoxC" type="VBoxContainer" parent="PanelC"]
layout_mode = 2

[node name="NomLabel" type="Label" parent="PanelC/PresentationVBoxC"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_arob1")
text = "Nom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SeparatorLine2D" type="Line2D" parent="PanelC/PresentationVBoxC"]
points = PackedVector2Array(20, 26, 150, 26)
width = 3.0
default_color = Color(0.176471, 0.176471, 0.219608, 0.698039)

[node name="MarginC" type="MarginContainer" parent="PanelC/PresentationVBoxC"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PanelC/PresentationVBoxC/MarginC"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 1
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2

[node name="Line2D" type="Line2D" parent="PanelC/PresentationVBoxC/MarginC"]
points = PackedVector2Array(5, 2, 5, 121, 165, 121, 165, 3, 4, 3)
width = 3.0
default_color = Color(0.431373, 0.470588, 0.54902, 1)

[node name="Panel" type="Panel" parent="PanelC/PresentationVBoxC/MarginC"]
visible = false
layout_mode = 2
theme = ExtResource("1_r48hp")

[node name="SeparatorLine2D2" type="Line2D" parent="PanelC/PresentationVBoxC"]
points = PackedVector2Array(20, 160, 150, 160)
width = 3.0
default_color = Color(0.176471, 0.176471, 0.219608, 0.698039)

[node name="PrixLabel" type="Label" parent="PanelC/PresentationVBoxC"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_o3adh")
text = "Label"
horizontal_alignment = 1
